refactor browsing to use the web worker. this is slower, probably because we are passing a big string, so it needs refactoring to just return the arrays

--- a/index.html
+++ b/index.html
@@ -442,20 +442,21 @@
 <!-- data -->
 <script src="data/bible.js"></script>
 <script src="data/strongs-dictionary.js"></script>
-<script src="data/kjvdwyer7.js"></script>
+<!--<script src="data/kjvdwyer7.js"></script>
 <script src="data/web3.js"></script>
 <script src="modules/versionSelector.js"></script>
+<script src="data/hebrew6.js"></script>-->
 <script src="data/strongsObjectWithFamilies.js"></script>
-<script src="data/hebrew6.js"></script>
-<!--<script src="data/jonah.js"></script>-->
-<script src="data/greek4.js"></script>
+<!--<script src="data/jonah.js"></script>
+<script src="data/greek4.js"></script>-->
 <script src="data/crossReferences.js"></script>
 <script src="data/morphology.js"></script>
-<script src="data/literalConsistent.js"></script>
+<!--<script src="data/literalConsistent.js"></script>-->
 
 <!-- apis
-<script src="api/search.js"></script> -->
-<script src="api/reference.js"></script>
+<script src="api/search.js"></script>
+<script src="api/reference.js"></script>-->
+<script src="api/word.js"></script>
 
 <!--modules -->
 <script src="modules/hebrew.js"></script>
@@ -469,10 +470,9 @@
 <script src="modules/reference.js"></script>
 
 <script src="js/morphologyApi.js"></script>
-<script src="js/searchBindings.js"></script>
-<script src="js/wordPanel.js"></script>
+<script src="modules/search.js"></script>
+<script src="modules/wordPanel.js"></script>
 <script src="js/loading.js"></script>
-<script src="js/reference.js"></script>
 <script src="js/popup.js"></script>
 <script src="js/toggler.js"></script>
 <script src="js/wayPoint.js"></script>
