--- a/index.html
+++ b/index.html
@@ -430,9 +430,9 @@
 <script src="data/bible.js"></script>
 <script src="data/strongs-dictionary.js"></script>
 <!--<script src="data/kjvdwyer7.js"></script>
-<script src="data/web3.js"></script>
+<script src="data/web3.js"></script>-->
 <script src="modules/versionSelector.js"></script>
-<script src="data/hebrew6.js"></script>-->
+<!--<script src="data/hebrew6.js"></script>-->
 <script src="data/strongsObjectWithFamilies.js"></script>
 <!--<script src="data/jonah.js"></script>
 <script src="data/greek4.js"></script>-->
