--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta name="google" content="notranslate" />
 		<title>Javascripture</title>
 		<link rel="stylesheet" href="css/layout.css" />
-		<link rel="stylesheet" href="css/styles.css" />
 		<style id="bodyFontFamily"></style>
 		<style id="bodyFontSize"></style>
 	</head>
@@ -91,11 +90,6 @@
 				<select id="chapterSelect" class="lookup dynamic chapterSelect" tabindex="2"></select>
 			</form>
 		</div>
-		<nav class="left">
-			<a href="#goToPanel" class="link-text open-menu" id="keyCode71" title="go to"><span aria-hidden="true" class="icon-book"></span> <span class="link-text">Go to</span></a>
-			<a href="#help-popup" class="open-popup" title="help"><span aria-hidden="true" class="icon-question"></span><span class="link-text">Help</span></a>
-			<a href="#settings-popup" class="open-popup" id="keyCode48" title="settings"><span aria-hidden="true" class="icon-cog2"></span><span class="link-text">Settings</span></a>
-		</nav>
 		<nav class="right">
 			<span href="#" class="randomReference icon-die" title="Load random reference"></span>
 
@@ -117,6 +111,7 @@
 		</nav>
 	</div>
 	<div class="goToPanel menu" id="goToPanel">
+		<a href="#goToPanel" class="link-text open-menu" id="keyCode71" title="go to"><span aria-hidden="true" class="icon-book"></span> <span class="link-text">Go to</span></a>
 		<div class="lookup bookSelect">
 			<a href="#book=Genesis&chapter=1" data-chapters="50">Genesis <span class="chapter"></span></a>
 			<a href="#book=Exodus&chapter=1" data-chapters="40">Exodus <span class="chapter"></span></a>
@@ -190,6 +185,92 @@
 		</div>
 	</div>
 
+	<div id="helpPanel" class="menu">
+		<a href="#helpPanel" class="link-text open-menu" title="help"><span aria-hidden="true" class="icon-question"></span> <span class="link-text">Help</span></a>
+		<div class="content">
+			<div class="content-padding">
+				<h2>Help</h2>
+				<ul>
+					<li>To find out about a word, click on it</li>
+					<li>To search for a word, double click it</li>
+				</ul>
+				<p>Keyboard shortcuts</p>
+				<ul>
+					<li>Go to a reference: just start typing</li>
+					<li>Next reference: =</li>
+					<li>Previous reference: -</li>
+					<li>Jump to chapter: just type in a number!</li>
+				</ul>
+				<p>Built in Chrome. Tested in FireFox.</p>
+			</div>
+		</div>
+	</div>
+
+	<!-- Settings Panel -->
+	<div id="settingsPanel" class="menu">
+		<a href="#settingsPanel" class="link-text open-menu" title="settings">
+			<span aria-hidden="true" class="icon-cog2"></span> <span class="link-text">Settings</span>
+		</a>
+		<div class="content">
+			<div class="content-padding">
+				<h2>Settings</h2>
+				<form>
+					<ul>
+						<li>
+							<label>Fonts:</label>
+							<select name="bodyFontFamily" class="changeStyle">
+								<option selected="selected" value="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">Helvetica</option>
+								<option value="font-family: 'Bookman Old Style' !important;">Bookman Old Style</option>
+								<option value="font-family: 'Courier New', Courier !important;">Courier</option>
+								<option value="font-family: Georgia !important;">Georgia</option>
+								<option value="font-family: 'Lucida Sans Unicode', 'Lucida Grande' !important;">Lucida</option>
+								<option value="font-family: 'Times New Roman', Times !important;">Times</option>
+								<option value="font-family: Verdana, Geneva !important;">Verdana</option>
+							</select>
+						</li>
+						<li>
+							<label>Font size:</label>
+							<select name="bodyFontSize" class="changeStyle">
+								<option value="font-size: 80%;">80%</option>
+								<option value="font-size: 90%;">90%</option>
+								<option selected="selected" value="font-size: 100%;">100%</option>
+								<option value="font-size: 110%;">110%</option>
+								<option value="font-size: 120%;">120%</option>
+								<option value="font-size: 130%;">130%</option>
+								<option value="font-size: 140%;">140%</option>
+								<option value="font-size: 150%;">150%</option>
+								<option value="font-size: 160%;">160%</option>
+								<option value="font-size: 170%;">170%</option>
+								<option value="font-size: 180%;">180%</option>
+								<option value="font-size: 190%;">190%</option>
+								<option value="font-size: 200%;">200%</option>
+							</select>
+						</li>
+						<li>
+							<label>Colours:</label>
+							<select id="subdueColorBy">
+								<option value="1">Very Bright</option>
+								<option value="1.5" selected="selected">Bright</option>
+								<option value="2">Normal</option>
+								<option value="3">Dark</option>
+								<option value="4">Very Dark</option>
+							</select>
+						</li>
+						<li>
+							<label>Reference picker:</label>
+							<select id="referencePicker">
+								<option value="input">Typing</option>
+								<option value="select">Drop down menu</option>
+							</select>
+						</li>
+					</ul>
+				</form>
+			</div>
+		</div>
+	</div>
+
+
+
 	<div id="referenceTracking" class="searchPanel" method="get" action="#search">
 	</div>
 
@@ -259,87 +340,6 @@
 				</ul>
 				<input type="submit" value="Search" />
 			</form>
-		</div>
-	</div>
-</div>
-
-<!-- Settings popup -->
-<div id="settings-popup" class="popup">
-	<div class="content">
-		<a aria-hidden="true" class="icon-cross close-popup"></a>
-		<div class="content-padding">
-			<h2>Settings</h2>
-			<form>
-				<ul>
-					<li>
-						<label>Fonts:</label>
-						<select name="bodyFontFamily" class="changeStyle">
-							<option value="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">Helvetica</option>
-							<option value="font-family: 'Bookman Old Style' !important;">Bookman Old Style</option>
-							<option value="font-family: 'Courier New', Courier !important;">Courier</option>
-							<option value="font-family: Georgia !important;">Georgia</option>
-							<option value="font-family: 'Lucida Sans Unicode', 'Lucida Grande' !important;">Lucida</option>
-							<option value="font-family: 'Times New Roman', Times !important;">Times</option>
-							<option value="font-family: Verdana, Geneva !important;">Verdana</option>
-						</select>
-					</li>
-					<li>
-						<label>Font size:</label>
-						<select name="bodyFontSize" class="changeStyle">
-							<option value="font-size: 80%;">80%</option>
-							<option value="font-size: 90%;">90%</option>
-							<option value="font-size: 100%;">100%</option>
-							<option value="font-size: 110%;">110%</option>
-							<option value="font-size: 120%;">120%</option>
-							<option value="font-size: 130%;">130%</option>
-							<option value="font-size: 140%;">140%</option>
-							<option value="font-size: 150%;">150%</option>
-							<option value="font-size: 160%;">160%</option>
-							<option value="font-size: 170%;">170%</option>
-							<option value="font-size: 180%;">180%</option>
-							<option value="font-size: 190%;">190%</option>
-							<option value="font-size: 200%;">200%</option>
-						</select>
-					</li>
-					<li>
-						<label>Colours:</label>
-						<select id="subdueColorBy">
-							<option value="1">Very Bright</option>
-							<option value="1.5" selected="selected">Bright</option>
-							<option value="2">Normal</option>
-							<option value="3">Dark</option>
-							<option value="4">Very Dark</option>
-						</select>
-					</li>
-					<li>
-						<label>Reference picker:</label>
-						<select id="referencePicker">
-							<option value="input">Typing</option>
-							<option value="select">Drop down menu</option>
-						</select>
-					</li>
-				</ul>
-			</form>
-		</div>
-	</div>
-</div>
-<div id="help-popup" class="popup">
-	<div class="content">
-		<a aria-hidden="true" class="icon-cross close-popup"></a>
-		<div class="content-padding">
-			<h2>Help</h2>
-			<ul>
-				<li>To find out about a word, click on it</li>
-				<li>To search for a word, double click it</li>
-			</ul>
-			<p>Keyboard shortcuts</p>
-			<ul>
-				<li>Go to a reference: just start typing</li>
-				<li>Next reference: =</li>
-				<li>Previous reference: -</li>
-				<li>Jump to chapter: just type in a number!</li>
-			</ul>
-			<p>Built in Chrome. Tested in FireFox.</p>
 		</div>
 	</div>
 </div>
