fixing advanced search panel padding

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 						<option>web</option>
 					</select>
 				</li>
-				<li class="advanced">
+				<li class="advanced sentence">
 					<label for="clusivity">Look for</label>
 					<select name="clusivity" id="clusivity">
 						<option value="exclusive" selected>All</option>
