word panel layout fixes

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 
 	<div id="wordDetailsPanel" class="menu left top">
 		<a href="#wordDetailsPanel" class="link-text open-menu" id="keyCode71" title="go to"><span aria-hidden="true" class="icon-details"></span> <span class="link-text">Word details</span></a>
-		<div id="wordControlPanel">
+		<div id="wordControlPanel" class="content">
 			<style></style>
-			<div class="control-panel">
+			<div class="control-panel content-padding">
 				<div class="duplicated">Select a word to show more details about it here. Double click to search.</div>
 			</div>
 		</div>
@@ -344,19 +344,21 @@
 		</div>
 	</div>
 </div>
-<div class="wordControlPanelTemplate">
-	<style></style>
-	<div class="word-details">
-		<span class="wordControlPanelStrongsNumber"></span> | <span class="wordControlPanelEnglish"></span> | <span class="wordControlPanelLemma"></span> | <span class="wordControlPanelTransliteration"></span> | <span class="wordControlPanelPronounciation"></span>
-		<div class="word-tree" id="wordTreeRoots"></div>
-		<div class="word-tree" id="wordTreeBranches"></div>
-		<div class="word-tree" id="wordTreeFamily"></div>
-	</div>
-	<div class="definitions">
-		<strong>KJV Usage:</strong> <span class="wordControlPanelKJVDef"></span><br />
-		<strong>Strongs Definition:</strong> <span class="wordControlPanelStrongsDef"></span><br />
-		<strong>Derivation:</strong> <span class="wordControlPanelDerivation"></span><br />
-		<strong>Morphology:</strong> <span class="wordControlPanelMorphology"></span><br />
+<div class="wordControlPanelTemplate content">
+	<div class="content-padding">
+		<style></style>
+		<div class="word-details">
+			<span class="wordControlPanelStrongsNumber"></span> | <span class="wordControlPanelEnglish"></span> | <span class="wordControlPanelLemma"></span> | <span class="wordControlPanelTransliteration"></span> | <span class="wordControlPanelPronounciation"></span>
+			<div class="word-tree" id="wordTreeRoots"></div>
+			<div class="word-tree" id="wordTreeBranches"></div>
+			<div class="word-tree" id="wordTreeFamily"></div>
+		</div>
+		<div class="definitions">
+			<strong>KJV Usage:</strong> <span class="wordControlPanelKJVDef"></span><br />
+			<strong>Strongs Definition:</strong> <span class="wordControlPanelStrongsDef"></span><br />
+			<strong>Derivation:</strong> <span class="wordControlPanelDerivation"></span><br />
+			<strong>Morphology:</strong> <span class="wordControlPanelMorphology"></span><br />
+		</div>
 	</div>
 </div>
 
