--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 		</div>
 	</div>
 
-	<div id="wordDetailsPanel" class="menu left top">
-		<a href="#wordDetailsPanel" class="link-text open-menu" id="keyCode71" title="go to"><span aria-hidden="true" class="icon-details"></span> <span class="link-text">Word details</span></a>
+	<div id="wordDetailsPanel" class="menu left">
+		<a href="#wordDetailsPanel" class="link-text open-menu" id="keyCode68" title="go to"><span aria-hidden="true" class="icon-details"></span> <span class="link-text">Word details</span></a>
 		<div id="wordControlPanel" class="content">
 			<style></style>
 			<div class="control-panel content-padding">
@@ -188,7 +188,7 @@
 	</div>
 
 	<div id="helpPanel" class="menu left">
-		<a href="#helpPanel" class="link-text open-menu" title="help"><span aria-hidden="true" class="icon-question"></span> <span class="link-text">Help</span></a>
+		<a href="#helpPanel" class="link-text open-menu" id="keyCode72" title="help"><span aria-hidden="true" class="icon-question"></span> <span class="link-text">Help</span></a>
 		<div class="content">
 			<div class="content-padding">
 				<h2>Help</h2>
@@ -210,7 +210,7 @@
 
 	<!-- Settings Panel -->
 	<div id="settingsPanel" class="menu left">
-		<a href="#settingsPanel" class="link-text open-menu" title="settings">
+		<a href="#settingsPanel" class="link-text open-menu" id="keyCode74" title="settings">
 			<span aria-hidden="true" class="icon-cog2"></span> <span class="link-text">Settings</span>
 		</a>
 		<div class="content">
@@ -272,8 +272,8 @@
 	</div>
 
 
-	<div id="referenceTracking" class="searchPanel menu right top">
-		<a href="#referenceTracking" class="link-text open-menu" title="Search">
+	<div id="referenceTracking" class="searchPanel menu right">
+		<a href="#referenceTracking" id="keyCode83" class="link-text open-menu" title="Search">
 			<span aria-hidden="true" class="icon-search"></span> <span class="link-text">Search</span>
 		</a>
 		<form class="search">
@@ -447,6 +447,7 @@
 <script src="modules/translateLiterally.js"></script>
 <script src="modules/reference.js"></script>
 <script src="modules/bookmarks.js"></script>
+<script src="modules/menu.js"></script>
 
 <script src="js/morphologyApi.js"></script>
 <script src="modules/search.js"></script>
