only need one version selector

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="dock" class="input">
 		<div class="heading-wrapper">
 			<form class="goToReference">
-				<select name="leftVersion" id="versionSelectorLeft" class="versionSelector" data-target="left">
+				<select name="leftVersion" id="versionSelectorLeft" class="versionSelector" data-target="left" style="display: none;">
 					<option value="original" selected>Original</option>
 					<option value="kjv">KJV</option>
 					<option value="web">WEB</option>
