make it possible to turn on/off family highlighting

--- a/index.html
+++ b/index.html
@@ -272,6 +272,13 @@
 								<option value="select">Drop down menu</option>
 							</select>
 						</li>
+						<li>
+							<label>Highlight words with:</label>
+							<select id="highlightWordsWith">
+								<option value="same">Same Strong's number</option>
+								<option value="family">Same family</option>
+							</select>
+						</li>
 					</ul>
 				</form>
 			</div>
