--- a/index.html
+++ b/index.html
@@ -426,7 +426,8 @@
 
 <!-- libs -->
 <script src="lib/jquery-2.0.3.min.js"></script>
-<script src="lib/json2.js"></script>
+<script src="lib/underscore.js"></script>
+<script src="lib/backbone.js"></script>
 <script src="lib/jquery.scrollTo.js"></script>
 <script src="lib/jquery.waypoints.js"></script>
 <!--<script src="lib/raphael-min.js"></script>
