adding a contact link

--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
 		<div class="content">
 			<div class="content-padding">
 				<h2>Help</h2>
+				<p><a href="http://scruffian.wordpress.com/contact/">Having problems?</a></p>
+
 				<ul>
 					<li>To find out about a word, click on it</li>
 					<li>To search for a word, double click it</li>
@@ -414,6 +416,7 @@
 				<li>Additional word information, including Strong's roots and branches</li>
 				<li>Cross references</li>
 			</ul>
+			<a href="http://scruffian.wordpress.com/contact/">Having problems?</a>
 		</div>
 	</div>
 </div>
