--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 	<div class="content">
 		<a aria-hidden="true" class="icon-cross close-popup"></a>
 		<div class="content-padding">
-			<h2>Cache</h2>
+			<h2>New version</h2>
 			<p>A new version of JavaScripture is available. <a href="javascript:window.location.reload();">Reload to install</a></p>
 		</div>
 	</div>
