allow users to select their own versions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="dock" class="input">
 		<div class="heading-wrapper">
 			<form class="goToReference">
-				<select name="leftVersion" id="versionSelectorLeft" class="versionSelector" data-target="left" style="display: none;">
+				<select name="leftVersion" id="versionSelectorLeft" class="versionSelector" data-target="left">
 					<option value="original" selected>Original</option>
 					<option value="kjv">KJV</option>
 					<option value="web">WEB</option>
@@ -465,7 +465,7 @@
 <script src="modules/hebrew.js"></script>
 <script src="js/colors.js"></script>
 <script src="js/events.js"></script>
-<script src="modules/disableHover.js"></script>
+<!--<script src="modules/disableHover.js"></script>-->
 <script src="modules/readingMode.js"></script>
 <script src="js/functionalScripts.js"></script>
 <script src="modules/translateLiterally.js"></script>
