--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 					<option value="original" selected>Original</option>
 					<option value="kjv">KJV</option>
 					<option value="web">WEB</option>
+					<option value="lc" selected>Literal Consistent</option>
 					<!--<option value="lc">Literal Consistent</option>-->
 				</select>
 				<input type="text" id="goToReference" placeholder="Go to reference" />
@@ -94,7 +95,7 @@
 					<option value="original">Original</option>
 					<option value="kjv" selected>KJV</option>
 					<option value="web">WEB</option>
-					<!--<option value="lc">Literal Consistent</option>-->
+					<option value="lc" selected>Literal Consistent</option>
 				</select>
 			</form>
 		</div>
