adding a literal consistent translation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<option value="original" selected>Original</option>
 					<option value="kjv">KJV</option>
 					<option value="web">WEB</option>
-					<option value="lc" selected>Literal Consistent</option>
+					<option value="lc">Literal Consistent</option>
 					<!--<option value="lc">Literal Consistent</option>-->
 				</select>
 				<input type="text" id="goToReference" placeholder="Go to reference" />
@@ -455,7 +455,7 @@
 <script src="data/greek4.js"></script>-->
 <script src="data/crossReferences.js"></script>
 <script src="data/morphology.js"></script>
-<!--<script src="data/literalConsistent.js"></script>-->
+<script src="data/literalConsistent.js"></script>
 
 <!-- apis
 <script src="api/search.js"></script>
