adding morphological data to the Hebrew. Big change

--- a/index.html
+++ b/index.html
@@ -440,6 +440,8 @@
 <script src="lib/backbone.localStorage.js"></script>
 <script src="lib/jquery.scrollTo.js"></script>
 <script src="lib/jquery.waypoints.js"></script>
+<script src="lib/MorphCodes.js"></script>
+<script src="lib/MorphParse.js"></script>
 <!--<script src="lib/raphael-min.js"></script>
 <script src="lib/raphael.pie.js"></script>-->
 
