fix morphology for greek and english

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 					<option value="original" selected>Original</option>
 					<option value="kjv">KJV</option>
 					<option value="web">WEB</option>
-					<option value="lc">Literal Consistent</option>
 					<!--<option value="lc">Literal Consistent</option>-->
 				</select>
 				<input type="text" id="goToReference" placeholder="Go to reference" />
@@ -95,7 +94,7 @@
 					<option value="original">Original</option>
 					<option value="kjv" selected>KJV</option>
 					<option value="web">WEB</option>
-					<option value="lc" selected>Literal Consistent</option>
+					<!--<option value="lc">Literal Consistent</option>-->
 				</select>
 			</form>
 		</div>
