lots of fixes for the literal consistent transation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<option value="original" selected>Original</option>
 					<option value="kjv">KJV</option>
 					<option value="web">WEB</option>
-					<!--<option value="lc">Literal Consistent</option>-->
+					<option value="lc">Literal Consistent</option>
 				</select>
 				<input type="text" id="goToReference" placeholder="Go to reference" />
 				<select id="bookSelect" class="lookup bookSelect" tabindex="1">
@@ -94,7 +94,7 @@
 					<option value="original">Original</option>
 					<option value="kjv" selected>KJV</option>
 					<option value="web">WEB</option>
-					<!--<option value="lc">Literal Consistent</option>-->
+					<option value="lc">Literal Consistent</option>
 				</select>
 			</form>
 		</div>
@@ -447,6 +447,7 @@
 <!-- data -->
 <script src="data/bible.js"></script>
 <script src="data/strongs-dictionary.js"></script>
+<script src="data/extra-dictionary.js"></script>
 <!--<script src="data/kjvdwyer7.js"></script>
 <script src="data/web3.js"></script>-->
 <script src="modules/versionSelector.js"></script>
